--- a/styles.css
+++ b/styles.css
@@ -317,7 +317,7 @@ footer {
 
 /* Page Banner */
 .page-banner {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('https://via.placeholder.com/1920x400');
+    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('https://static.tildacdn.com/tild6533-6234-4561-b138-383765616439/teamwork-or-team-bui.jpg');
     background-size: cover;
     background-position: center;
     color: white;
